feat :  로직 수정 및 에러 수정